--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
-2018-06-14  DEV  <DEV@DEV>
+2018-06-16  Iulian Rotaru  <iulian@gnotis.ro>
 
-	* pom.xml: update dependencies
+	* pom.xml: remove java deprecated arguments from test plugin configuration
