--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
 2018-06-16  Iulian Rotaru  <iulian@gnotis.ro>
 
-	* pom.xml: remove java deprecated arguments from test plugin configuration
+	* pom.xml: remove java deprecated arguments from test plugin configuration, add missing plugin versions
